--- a/src/main/java/view/LancamentoHora/LancamentoHora.fxml
+++ b/src/main/java/view/LancamentoHora/LancamentoHora.fxml
@@ -32,7 +32,6 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
-<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -67,28 +66,16 @@
           <content>
             <AnchorPane id="Content" minHeight="578.0" minWidth="810.0" prefHeight="606.0" prefWidth="870.0" styleClass="content">
               <children>
-                        <TableView fx:id="table_lancamento" centerShape="false" layoutX="17.0" layoutY="194.0" prefHeight="225.0" prefWidth="760.0" AnchorPane.leftAnchor="17.0" AnchorPane.rightAnchor="18.0">
+                        <TableView fx:id="table_lancamento" centerShape="false" editable="true" layoutX="17.0" layoutY="194.0" prefHeight="225.0" prefWidth="760.0" AnchorPane.leftAnchor="17.0" AnchorPane.rightAnchor="18.0">
                           <columns>
-                              <TableColumn fx:id="col_cr" prefWidth="93.6000394821167" text="CR">
-                                 <styleClass>
-                                    <String fx:value="rp-column" />
-                                    <String fx:value="window" />
-                                    <String fx:value="rp-column" />
-                                 </styleClass>
-                              </TableColumn>
+                              <TableColumn fx:id="col_cr" prefWidth="93.6000394821167" styleClass="rp-column" text="CR" />
+                            <TableColumn fx:id="col_projeto" prefWidth="75.0" styleClass="rp-column" text="Projeto" />
                               <TableColumn fx:id="col_modalidade" prefWidth="138.3999786376953" styleClass="rp-column" text="Modalidade" />
                               <TableColumn fx:id="col_inicio" prefWidth="111.20001220703125" styleClass="rp-column" text="Inicio" />
                               <TableColumn fx:id="col_fim" prefWidth="75.0" styleClass="rp-column" text="Fim" />
                               <TableColumn fx:id="col_motivo" prefWidth="75.0" styleClass="rp-column" text="Motivo" />
                               <TableColumn fx:id="col_acoes" prefWidth="75.0" styleClass="rp-column" text="Ações" />
-                            <TableColumn fx:id="col_projeto" prefWidth="75.0" styleClass="rp-column" text="Projeto" />
-                              <TableColumn fx:id="col_id" editable="false" prefWidth="93.6000394821167" text="ID" visible="false">
-                                 <styleClass>
-                                    <String fx:value="rp-column" />
-                                    <String fx:value="window" />
-                                    <String fx:value="rp-column" />
-                                 </styleClass>
-                              </TableColumn>
+                              <TableColumn fx:id="col_id" editable="false" prefWidth="93.6000394821167" styleClass="rp-column" text="ID" visible="false" />
                           </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -99,7 +86,8 @@
                               <Font name="Calibri Bold" size="24.0" />
                            </font>
                         </Label>
-                        <Button fx:id="btn_lancar" layoutX="41.0" layoutY="432.0" mnemonicParsing="false" onAction="#lancarHoras" text="Lançar" />
+                        <Button fx:id="btn_adicionarLinha" layoutX="17.0" layoutY="438.0" mnemonicParsing="false" onAction="#criarNovaLinha" text="+" />
+                        <Button fx:id="btn_lancar" layoutX="84.0" layoutY="438.0" mnemonicParsing="false" onAction="#lancarHoras" text="Lançar" />
               </children>
             </AnchorPane>
           </content>
