--- a/src/main/java/view/GerenciamentoCRProjeto.fxml
+++ b/src/main/java/view/GerenciamentoCRProjeto.fxml
@@ -7,15 +7,20 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="449.0" prefWidth="558.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.GerenciamentoCRProjetoController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="449.0" prefWidth="823.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.GerenciamentoCRProjetoController">
    <children>
       <Pane layoutY="-5.0" prefHeight="455.0" prefWidth="133.0" style="-fx-background-color: #4863A0;" />
-      <Label layoutX="149.0" layoutY="14.0" prefHeight="39.0" prefWidth="396.0" text="Gerenciamento de CR e Projeto" textFill="#483fee">
+      <Label layoutX="224.0" layoutY="21.0" prefHeight="39.0" prefWidth="431.0" text="Gerenciamento de CR e Projeto" textFill="#483fee">
          <font>
             <Font size="27.0" />
          </font>
       </Label>
       <Button layoutX="269.0" layoutY="347.0" mnemonicParsing="false" onAction="#cadastrarProjeto" prefHeight="25.0" prefWidth="86.0" text="INSERIR" />
-      <ComboBox fx:id="combo" layoutX="149.0" layoutY="104.0" prefWidth="150.0" />
+      <ComboBox fx:id="comboSquads" layoutX="162.0" layoutY="166.0" prefWidth="150.0" />
+      <ComboBox fx:id="comboProjeto" layoutX="371.0" layoutY="166.0" prefWidth="150.0" />
+      <ComboBox fx:id="comboNomeUsuario" layoutX="621.0" layoutY="166.0" prefWidth="150.0" />
+      <Label layoutX="429.0" layoutY="137.0" text="Projeto" />
+      <Label layoutX="224.0" layoutY="137.0" text="Squads" />
+      <Label layoutX="641.0" layoutY="137.0" text="Nome do usuario" />
    </children>
 </AnchorPane>
