--- a/src/main/java/view/CadastroUsuario.fxml
+++ b/src/main/java/view/CadastroUsuario.fxml
@@ -33,7 +33,6 @@
 -->
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -44,26 +43,35 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="656.0" prefWidth="1186.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CadastroUsuarioController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="572.0" prefWidth="924.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CadastroUsuarioController">
   <children>
-<AnchorPane id="Content" prefHeight="760.0" prefWidth="1204.0" style="-fx-background-color: ffffff;" styleClass="content" stylesheets="@stylesCadastroUsuario.css">
+<AnchorPane id="Content" minHeight="566.0" prefHeight="595.0" prefWidth="1026.0" style="-fx-background-color: ffffff;" styleClass="content" stylesheets="@stylesCadastroUsuario.css">
   <children>
-            <Button fx:id="btn_cadastrar" layoutX="756.0" layoutY="582.0" mnemonicParsing="false" onAction="#cadastrarUsuario" prefHeight="45.0" prefWidth="208.0" style="-fx-background-color: #1f25c1; -fx-background-radius: 50px;" styleClass="myButton" text="Cadastrar" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="btn_cadastrar" layoutX="530.0" layoutY="478.0" mnemonicParsing="false" onAction="#cadastrarUsuario" prefHeight="45.0" prefWidth="208.0" style="-fx-background-color: #1f25c1; -fx-background-radius: 50px;" styleClass="myButton" text="Cadastrar" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
             <HBox alignment="CENTER" layoutX="152.0" layoutY="216.0" />
-            <TextField layoutX="581.0" layoutY="267.0" prefHeight="45.0" prefWidth="570.0" promptText="  E-mail" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
-            <TextField layoutX="581.0" layoutY="349.0" prefHeight="45.0" prefWidth="223.0" promptText="  CPF" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
-            <TextField layoutX="928.0" layoutY="349.0" prefHeight="45.0" prefWidth="223.0" promptText="  Tel" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
-            <TextField layoutX="581.0" layoutY="171.0" opacity="0.85" prefHeight="45.0" prefWidth="570.0" promptText="  Nome" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
+            <TextField layoutX="391.0" layoutY="253.0" prefHeight="45.0" prefWidth="485.0" promptText="  E-mail" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
+            <TextField layoutX="391.0" layoutY="355.0" prefHeight="45.0" prefWidth="192.0" promptText="  CPF" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
+            <TextField layoutX="674.0" layoutY="355.0" prefHeight="45.0" prefWidth="192.0" promptText="  Tel" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
+            <TextField layoutX="398.0" layoutY="148.0" opacity="0.85" prefHeight="45.0" prefWidth="485.0" promptText="  Nome" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
            
-            <BorderPane prefHeight="780.0" prefWidth="315.0">
+            <BorderPane prefHeight="656.0" prefWidth="356.0">
                <left>
-                  <AnchorPane prefHeight="710.0" prefWidth="393.0" style="-fx-background-color: #1f25c1;" BorderPane.alignment="CENTER">
+                  <AnchorPane prefHeight="651.0" prefWidth="349.0" style="-fx-background-color: #1f25c1;" BorderPane.alignment="CENTER">
                      <children>
-                        <Text fill="WHITE" layoutX="59.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" text="Bem vindo a tela de cadastro de usuario" textAlignment="CENTER" wrappingWidth="276.0">
+                        <Button layoutX="144.0" layoutY="462.0" minWidth="53.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="53.0" styleClass="myButton"  stylesheets="@stylesCadastroUsuario.css" style="-fx-background-color: #1f25c1;" text="" textAlignment="CENTER">
+                           <graphic>
+                              <ImageView fitHeight="58.0" fitWidth="68.0">
+                                 <image>
+                                    <Image url="@assets/botao.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                        <Text fill="WHITE" layoutX="33.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" text="Bem vindo a tela de cadastro de usuario" textAlignment="CENTER" wrappingWidth="276.0">
                            <font>
                               <Font size="30.0" />
                            </font>
@@ -72,19 +80,18 @@
                         <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="79.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
                         <ImageView fitHeight="99.0" fitWidth="200.0" layoutX="79.0" layoutY="40.0">
                            <image>
-                              <Image url="@logo2rp.png" />
+                              <Image url="@assets/logo.png" />
                            </image>
                         </ImageView>
                      </children>
                   </AnchorPane>
                </left>
             </BorderPane>
-            <Text fill="#2247ff" layoutX="712.0" layoutY="107.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" text="Informe seus dados de cadastros" textAlignment="CENTER">
+            <Text fill="#2247ff" layoutX="456.0" layoutY="79.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" text="Informe seus dados de cadastros" textAlignment="CENTER">
                <font>
                   <Font size="24.0" />
                </font>
             </Text>
-            <PasswordField layoutX="581.0" layoutY="444.0" prefHeight="45.0" prefWidth="223.0" promptText=" Senha" style="-fx-background-color: f5f0f0; -fx-background-radius: 15px;" />
   </children>
 </AnchorPane>
   </children>
