--- a/src/main/java/view/Login/Login.fxml
+++ b/src/main/java/view/Login/Login.fxml
@@ -32,7 +32,6 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
-<?import com.gluonhq.charm.glisten.control.Icon?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -49,7 +48,7 @@
   <children>
 <AnchorPane id="Content" minHeight="566.0" prefHeight="595.0" prefWidth="1026.0" style="-fx-background-color: ffffff;" styleClass="content" stylesheets="@../stylesCadastroUsuario.css">
   <children>
-            <Button fx:id="btn_entrar" layoutX="527.0" layoutY="328.0" mnemonicParsing="false" onAction="#entrarUsuario" onMousePressed="#entrar" prefHeight="45.0" prefWidth="208.0" style="-fx-background-color: #1f25c1; -fx-background-radius: 50px;" styleClass="myButton" text="Entrar" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="btn_entrar" layoutX="527.0" layoutY="328.0" mnemonicParsing="false" onAction="#entrarUsuario" onMouseClicked="#entrar" prefHeight="45.0" prefWidth="208.0" style="-fx-background-color: #1f25c1; -fx-background-radius: 50px;" styleClass="myButton" text="Entrar" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font size="14.0" />
                </font>
@@ -57,7 +56,11 @@
             <HBox alignment="CENTER" layoutX="152.0" layoutY="216.0" />
             <HBox alignment="CENTER" layoutX="414.0" layoutY="149.0" style="-fx-background-color: f5f0f0; -fx-background-radius: 15px;">
                <children>
-                  <Icon blendMode="SRC_ATOP" content="EMAIL" prefHeight="45.0" prefWidth="45.0" />
+                  <ImageView fitHeight="35.0" fitWidth="41.0">
+                     <image>
+                        <Image url="@../assets/user.png" />
+                     </image>
+                  </ImageView>
                   <TextField fx:id="emailField" opacity="0.85" prefHeight="45.0" prefWidth="407.0" promptText="Email" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
                </children>
             </HBox>
@@ -92,10 +95,14 @@
                   <Font size="24.0" />
                </font>
             </Text>
-            <HBox layoutX="414.0" layoutY="231.0" prefHeight="45.0" prefWidth="452.0" style="-fx-background-color: f5f0f0; -fx-background-radius: 15px;">
+            <HBox layoutX="414.0" layoutY="227.0" prefHeight="45.0" prefWidth="452.0" style="-fx-background-color: f5f0f0; -fx-background-radius: 10px;">
                <children>
-                  <Icon blendMode="SRC_ATOP" content="LOCK" prefHeight="45.0" prefWidth="45.0" style="-fx-background-color: ;" />
-                  <PasswordField fx:id="passwordField" prefHeight="45.0" prefWidth="326.0" promptText="Senha" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
+                  <ImageView fitHeight="35.0" fitWidth="41.0">
+                     <image>
+                        <Image url="@../assets/Lock.png" />
+                     </image>
+                  </ImageView>
+                  <PasswordField fx:id="passwordField" prefHeight="49.0" prefWidth="418.0" promptText="Senha" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
                </children>
             </HBox>
   </children>
