--- a/src/main/java/view/CadastroCR.fxml
+++ b/src/main/java/view/CadastroCR.fxml
@@ -7,18 +7,20 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="449.0" prefWidth="558.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CadastroCRController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="609.0" prefWidth="944.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CadastroCRController">
    <children>
-      <Pane layoutY="-5.0" prefHeight="455.0" prefWidth="133.0" style="-fx-background-color: #4863A0;" />
-      <Label layoutX="236.0" layoutY="14.0" prefHeight="39.0" prefWidth="191.0" text="Cadastro de CR" textFill="#483fee">
+      <Pane layoutY="-5.0" prefHeight="616.0" prefWidth="133.0" style="-fx-background-color: #4863A0;" />
+      <Label layoutX="411.0" layoutY="27.0" prefHeight="39.0" prefWidth="191.0" text="Cadastro de CR" textFill="#483fee">
          <font>
             <Font size="27.0" />
          </font>
       </Label>
-      <Label layoutX="188.0" layoutY="82.0" prefHeight="17.0" prefWidth="52.0" text="Squad" />
-      <Label layoutX="355.0" layoutY="82.0" prefHeight="17.0" prefWidth="133.0" text="CPF Gestor Responsável" />
-      <TextField fx:id="txSquad" layoutX="157.0" layoutY="116.0" prefHeight="25.0" prefWidth="120.0" />
-      <TextField fx:id="txGestor" layoutX="358.0" layoutY="116.0" prefHeight="25.0" prefWidth="127.0" />
-      <Button layoutX="299.0" layoutY="348.0" mnemonicParsing="false" onAction="#inserirCR" prefHeight="25.0" prefWidth="86.0" text="INSERIR" />
+      <Label layoutX="188.0" layoutY="91.0" prefHeight="17.0" prefWidth="52.0" text="Nome" />
+      <Label layoutX="778.0" layoutY="91.0" prefHeight="17.0" prefWidth="37.0" text="Sigla" />
+      <TextField fx:id="tfNome" layoutX="154.0" layoutY="129.0" prefHeight="25.0" prefWidth="120.0" />
+      <TextField fx:id="tfSigla" layoutX="738.0" layoutY="129.0" prefHeight="25.0" prefWidth="127.0" />
+      <Button layoutX="463.0" layoutY="334.0" mnemonicParsing="false" onAction="#inserirCR" prefHeight="25.0" prefWidth="86.0" text="INSERIR" />
+      <TextField fx:id="tfCodigo" layoutX="446.0" layoutY="129.0" prefHeight="25.0" prefWidth="120.0" />
+      <Label layoutX="480.0" layoutY="91.0" prefHeight="17.0" prefWidth="52.0" text="Código" />
    </children>
 </AnchorPane>
