--- a/src/main/java/view/Login/Login.fxml
+++ b/src/main/java/view/Login/Login.fxml
@@ -33,7 +33,6 @@
 -->
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -53,21 +52,20 @@
                   <Font size="14.0" />
                </font>
             </Button>
-            <HBox alignment="CENTER" layoutX="152.0" layoutY="216.0" />
             <HBox alignment="CENTER" layoutX="414.0" layoutY="149.0" style="-fx-background-color: f5f0f0; -fx-background-radius: 15px;">
                <children>
-                  <ImageView fitHeight="35.0" fitWidth="41.0">
+                  <ImageView fitHeight="36.0" fitWidth="42.0" style="-fx-opacity: 50%;">
                      <image>
                         <Image url="@../assets/user.png" />
                      </image>
                   </ImageView>
-                  <TextField fx:id="emailField" opacity="0.85" prefHeight="45.0" prefWidth="407.0" promptText="Email" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
+                  <TextField fx:id="emailField" opacity="0.85" prefHeight="45.0" prefWidth="408.0" promptText="Email" style="-fx-background-radius: 15px; -fx-background-color: F8F5F5;" />
                </children>
             </HBox>
         	   
             <BorderPane fx:id="rootPane" prefHeight="656.0" prefWidth="356.0">
                <left>
-                  <AnchorPane prefHeight="651.0" prefWidth="349.0" style="-fx-background-color: #1f25c1;" BorderPane.alignment="CENTER">
+                  <AnchorPane prefHeight="618.0" prefWidth="349.0" style="-fx-background-color: #1f25c1;" BorderPane.alignment="CENTER">
                      <children>
                         <Text fill="WHITE" layoutX="64.0" layoutY="179.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" text="Bem vindo a tela  de login" wrappingWidth="230.0">
                            <font>
@@ -95,14 +93,14 @@
                   <Font size="24.0" />
                </font>
             </Text>
-            <HBox layoutX="414.0" layoutY="227.0" prefHeight="45.0" prefWidth="452.0" style="-fx-background-color: f5f0f0; -fx-background-radius: 10px;">
+            <HBox alignment="CENTER" layoutX="414.0" layoutY="227.0" style="-fx-background-color: f5f0f0; -fx-background-radius: 15px;">
                <children>
-                  <ImageView fitHeight="35.0" fitWidth="41.0">
+                  <ImageView style="-fx-opacity: 50%;">
                      <image>
                         <Image url="@../assets/Lock.png" />
                      </image>
                   </ImageView>
-                  <PasswordField fx:id="passwordField" prefHeight="49.0" prefWidth="418.0" promptText="Senha" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
+                  <TextField fx:id="emailField1" opacity="0.85" prefHeight="45.0" prefWidth="414.0" promptText="Senha" style="-fx-background-radius: 15px; -fx-background-color: F8F5F5;" />
                </children>
             </HBox>
   </children>
