--- a/src/main/java/view/CadastroCliente.fxml
+++ b/src/main/java/view/CadastroCliente.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="609.0" prefWidth="944.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CadastroClienteController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="609.0" prefWidth="944.0" styleClass="content" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CadastroClienteController">
    <children>
-      <Pane layoutY="-5.0" prefHeight="615.0" prefWidth="141.0" style="-fx-background-color: #4863A0;">
+      <Pane layoutY="-5.0" prefHeight="615.0" prefWidth="141.0" styleClass="sidebar">
          <children>
             <ImageView fitHeight="52.0" fitWidth="93.0" layoutX="24.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
                <image>
